--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "sass": "^1.54.4"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0"
   }
 }
