--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "test": "jest --watch",
+    "test:coverage": "npm test -- --env=jsdom --coverage --watchAll"
   },
   "dependencies": {
     "gatsby": "^4.20.0",
@@ -29,7 +31,17 @@
     "sass": "^1.54.4"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-jsx": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0"
+    "@testing-library/react": "^13.3.0",
+    "babel-preset-gatsby": "^2.20.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest"
+    }
   }
 }
