--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:coverage": "npm test -- --env=jsdom --coverage --watchAll"
   },
   "dependencies": {
+    "@fontsource/anonymous-pro": "^4.5.8",
     "gatsby": "^4.20.0",
     "gatsby-plugin-google-analytics": "^4.20.0",
     "gatsby-plugin-image": "^2.20.0",
@@ -42,6 +43,10 @@
     "testEnvironment": "jsdom",
     "transform": {
       "^.+\\.(js|jsx)$": "babel-jest"
+    },
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less|scss)$": "<rootDir>/__mocks__/styleMock.js"
     }
   }
 }
