--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@fontsource/anonymous-pro": "^4.5.8",
+    "flowbite": "^1.5.2",
+    "flowbite-react": "^0.1.6",
     "gatsby": "^4.20.0",
     "gatsby-plugin-google-analytics": "^4.20.0",
     "gatsby-plugin-image": "^2.20.0",
@@ -35,9 +37,13 @@
     "@babel/plugin-syntax-jsx": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
+    "autoprefixer": "^10.4.8",
     "babel-preset-gatsby": "^2.20.0",
+    "gatsby-plugin-postcss": "^5.20.0",
     "jest": "^28.1.3",
-    "jest-environment-jsdom": "^28.1.3"
+    "jest-environment-jsdom": "^28.1.3",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   },
   "jest": {
     "testEnvironment": "jsdom",
