--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/plugin-syntax-jsx": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.4.3",
     "autoprefixer": "^10.4.8",
     "babel-preset-gatsby": "^2.20.0",
     "gatsby-plugin-postcss": "^5.20.0",
