--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@fontsource/anonymous-pro": "^4.5.8",
     "flowbite": "^1.5.2",
-    "flowbite-react": "^0.1.6",
+    "flowbite-react": "^0.1.8",
     "gatsby": "^4.20.0",
     "gatsby-plugin-google-analytics": "^4.20.0",
     "gatsby-plugin-image": "^2.20.0",
@@ -31,6 +31,7 @@
     "gatsby-transformer-sharp": "^4.20.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-vertical-timeline-component": "^3.5.2",
     "sass": "^1.54.4"
   },
   "devDependencies": {
