--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "postcss": "^8.4.16",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.1.8"
   },
   "jest": {
