--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "clean": "gatsby clean",
     "test": "jest --watch",
     "test:coverage": "npm test -- --env=jsdom --coverage --watchAll",
-    "build:tailwind": "tailwind build static/styles/index.css -o static/styles/tailwind.css"
+    "build:tailwind": "tailwind build static/styles/index.css -o static/styles/tailwind.css",
+    "cy:open": "cypress open",
+    "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open"
   },
   "dependencies": {
     "@fontsource/anonymous-pro": "^4.5.8",
@@ -37,16 +39,21 @@
   },
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@testing-library/cypress": "^8.0.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
     "autoprefixer": "^10.4.8",
+    "axe-core": "^4.4.3",
     "babel-preset-gatsby": "^2.20.0",
+    "cypress": "^10.6.0",
+    "cypress-axe": "^1.0.0",
     "gatsby-plugin-postcss": "^5.20.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "postcss": "^8.4.16",
     "react-test-renderer": "^18.2.0",
+    "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.1.8"
   },
   "jest": {
