--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-transformer-sharp": "^4.20.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.34.2",
     "react-vertical-timeline-component": "^3.5.2",
     "sass": "^1.54.4"
   },
