--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-google-analytics": "^4.20.0",
     "gatsby-plugin-image": "^2.20.0",
     "gatsby-plugin-manifest": "^4.20.0",
+    "gatsby-plugin-netlify": "^5.0.1",
     "gatsby-plugin-sass": "^5.20.0",
     "gatsby-plugin-sharp": "^4.20.0",
     "gatsby-plugin-sitemap": "^5.20.0",
